reorganization, remove 'ctx' param where not necessary, fix bug when concat threshold was >0

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,4 @@
+- standardize commands, write serializer/deserializer
+    - use this to bootstrap a test runner
+
 - use a slab allocator for all rope_t allocations
