--- a/todo.txt
+++ b/todo.txt
@@ -1,19 +1,18 @@
 TODO(chad): 
   -- FEATURES
-    - backend-supported 'move-by'
-      - move to next/previous word
-        - probably make it configurable as to what counts as a 'word'
-      - move to next/previous blank line
     - find/replace
       - will need to be able to efficiently iterate through leaf nodes in order
-      - going from the top down to get char 1, char 2, char 3, etc. will not be very efficient.
-    - configure tabs/spaces
+    - move to next/previous word
+        - probably make it configurable as to what counts as a 'word'
+    - move to next/previous blank line
+    - indent / unindent line
     - keybindings, modal editing
+    - tokenization (possibly supporting custom api?) and highlighting of grammars
+    - configure tabs/spaces
     - watch open files for changes (?)
       - indicate when a file has changed on disk since we started editing it
       - warn when going to save a file but it has changed since we've opened it
-   	- maybe just provide a 'reload from disk' command
-    - tokenization (possibly supporting custom api?) and corresponding highlighting of grammars
+      - maybe just provide a 'reload from disk' command
       - test on json
     - selection through click/drag
     - plugins, user-created commands
